# NUMERICAL_INTEGRATION_OF_FUNCTIONS

./: CMakeLists.txt  main.cpp
src/: NumericalIntegrator.h
